fix overflow

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
 
       .container {
         width: 100%;
+        max-height: 100%;
         flex: 1;
         text-align: center;
         display: flex;
@@ -66,6 +67,7 @@
         padding-left: 0;
         padding-right: 0;
         border-width: 0;
+        overflow: hidden;
         -webkit-font-smoothing: subpixel-antialiased;
         -moz-osx-font-smoothing: auto;
         font-size: 140px;
